# 2023-4e-salat-digitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  digitor.json  install.sh  load_image.py  test.py
.github/workflows/: build-documentation.yml
data/: README.md  png_to_array_convertor.py
docs/: literature.bib  main.tex  titulnistrany.tex
docs/sections/: implementace.tex  neuronovasit.tex  strojoveuceni.tex  struktura.tex  uvod.tex  zaver.tex  zkoumani.tex
src/: Connection.cpp  Connection.h  Layer.cpp  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetwork.json  Neuron.cpp  Neuron.h  TrainData.h  main.cpp
web/server/: main.py
web/static/: index.html  script.js
